tests/paczka1/small_fuzzy/10464100.err
Error in line 10: kcDmzst5L8 S523 54,4
Error in line 11: A118 S523 81,2
